tests/snapshots/yaml_suite_snapshots__yaml_suite_236B_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Invalid value after mapping
  tags: error mapping
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :foo\n   =VAL :bar\n"
  yaml: "foo:\n  bar\ninvalid\n"
