tests/snapshots/yaml_suite_snapshots__yaml_suite_27NA_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Spec Example 5.9. Directive Indicator
  from: "http://www.yaml.org/spec/1.2/spec.html#id2774058"
  tags: spec directive 1.3-err
  yaml: "%YAML 1.2\n--- text\n"
  tree: "+STR\n +DOC ---\n  =VAL :text\n -DOC\n-STR\n"
  json: "\"text\"\n"
  dump: "--- text\n"
