tests/snapshots/yaml_suite_snapshots__yaml_suite_2AUY_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Tags in Block Sequence
  from: NimYAML tests
  tags: tag sequence
  yaml: " - !!str a\n - b\n - !!int 42\n - d\n"
  tree: "+STR\n +DOC\n  +SEQ\n   =VAL <tag:yaml.org,2002:str> :a\n   =VAL :b\n   =VAL <tag:yaml.org,2002:int> :42\n   =VAL :d\n  -SEQ\n -DOC\n-STR\n"
  json: "[\n  \"a\",\n  \"b\",\n  42,\n  \"d\"\n]\n"
  dump: "- !!str a\n- b\n- !!int 42\n- d\n"
