tests/snapshots/yaml_suite_snapshots__yaml_suite_2CMS_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Invalid mapping in plain multiline
  from: "@perlpunk"
  tags: error mapping
  fail: true
  yaml: "this\n is\n  invalid: x\n"
  tree: "+STR\n +DOC\n"
